New media and an event adjustment
Added Multimedia (video) and Press Releases. Ongoing event tweek

--- a/assets/sass/local-group.scss
+++ b/assets/sass/local-group.scss
@@ -635,7 +635,8 @@ Vassar hompage and the News homepage */
             .dates--dayRange--current { 
                 .dateStart {
                     .dateMonth,
-                    .dateDay {
+                    .dateDay,
+                    .dateTime {
                         display: none;
                     }
                 }
@@ -643,7 +644,7 @@ Vassar hompage and the News homepage */
                     margin-left: 0;
                     text-transform: capitalize;
                 }
-            }
+            }          
         }
         .u-lMain {
             max-width: none;
@@ -665,6 +666,9 @@ Vassar hompage and the News homepage */
     .u-folderVassar-events,
     .u-folderAll,
     .u-folderVassar-everywhere,
+    .u-folderMultimedia,
+    .u-folderClassroom-revisited,
+    .u-folderReleases,
     /*.u-folderArts,
     .u-folderOn-campus,
     .u-folderRegional*/ {
@@ -979,6 +983,9 @@ Vassar hompage and the News homepage */
     .u-folderAll,
     .u-folderVassar-events,
     .u-folderVassar-everywhere,
+    .u-folderMultimedia,
+    .u-folderClassroom-revisited,
+    .u-folderReleases,
     /*.u-folderArts,
     .u-folderOn-campus,
     .u-folderRegional*/ {
@@ -1281,4 +1288,300 @@ Vassar hompage and the News homepage */
             margin: 12em auto 5% !important;
         }
     }
+}
+
+
+/* video removed from admin area in CMS 10/15/2020 */
+
+ul.videoList {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    /* 
+    grid-template-rows: auto;
+    justify-items: stretch;
+    */
+    column-gap: 1em;
+    row-gap: 1em;
+    list-style: none;
+    padding-left: 0;
+    a {
+       border: solid .1em !important;
+        display: grid;
+        grid-template: 
+            "videoThumbnail"
+            "videoHeader"
+            "videoCaption";
+        /* margin-bottom: 2em; */
+        /* height: 100%; */
+        line-height: 1.2;
+        padding: 1em 5% !important;
+        text-decoration: none !important;
+        &:hover {
+            background-color: hsl(34deg, 100%, 97%);
+            border-color: hsl(34deg, 50%, 50%);
+            color: hsl(34deg, 30%, 30%);
+            transform: scale( 1.0125 );
+            transition: all .25s ease-out;
+            box-shadow: 0 0 0.5em 0.25em rgb(179, 179, 179);
+        }
+    }
+    figcaption {
+        strong {
+            color: #333;
+            font-size: 1.05em;
+        }
+        em {
+            color: #333;
+            font-size: .9em;
+            line-height: 0 !important;
+        }
+        strong~em::before {
+            content: "\A";
+            display: block;
+        }
+    }
+    figure {
+        margin-bottom: 1em;        
+    }
+    h3 {
+        font: 600 1.25em acumin-pro, Arial, Helvetica;
+        grid-area: videoHeader;
+        line-height: 1.2;
+        margin: 0;
+        text-transform: none;
+        letter-spacing: normal;
+    }
+    img {
+        grid-area: videoThumbnail;
+        width: 100%;
+    }
+    li {
+        display: flex;
+    }
+    .imageOverlay {
+        position: relative;
+        &:after {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background-image: url(../../assets/images/video-play-button-white.png);
+            background-size: cover;
+         }    
+    }
+}
+.u-folderClassroom-revisited ul.videoList .imageOverlay:after {
+        background-image: url();
+}
+.modal
+{
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    z-index: 1050;
+    display: none;
+    overflow: hidden;
+    -webkit-overflow-scrolling: touch;
+    outline: 0;
+}
+
+.modal iframe
+{
+    border: 0;
+}
+
+.modal-backdrop
+{
+    background-color: #000;
+    bottom: 0;
+    left: 0;
+    opacity: .5;
+    position: fixed;
+    top: 0;
+    right: 0;
+    z-index: 1040;
+}
+
+.modal-backdrop.fade
+{
+    opacity: 0;
+}
+
+.modal-backdrop.show
+{
+    opacity: .94;
+}
+
+.modal-body
+{
+    position: relative;
+}
+
+.modal-content
+{
+    -webkit-background-clip: padding-box;
+    background-clip: padding-box;
+    background-color: #1A1A1A;
+    border-radius: .5em;
+    /*
+    -webkit-box-shadow: 0 3px 9px rgba(0,0,0,.5);
+    box-shadow: 0 3px 9px rgba(0,0,0,.5);
+    outline: 0;
+    */
+    /* offset header height to vertically center modal */
+    margin-top: -3.5em;
+    padding: 0 1em 1em;    
+    position: relative;
+}
+
+.modal-dialog
+{
+    /* position: relative; 
+    margin: 1em;
+    width: auto;
+    */
+    margin: 0 auto;
+    width: 90%;
+}
+
+.modal.fade
+{
+    opacity: 0;
+    -webkit-transition: opacity .15s linear;
+    -o-transition: opacity .15s linear;
+    transition: opacity .15s linear;
+}
+
+/* override Admission styling */
+.modal.fade:after,
+.modal-backdrop.fade:after
+{
+    display: none;
+    visibility: hidden;
+}
+/* override Admission styling */
+
+.modal.fade.show
+{
+    opacity: 1;
+}
+
+.modal.fade .modal-dialog
+{
+    -webkit-transition: -webkit-transform .3s ease-out;
+    -o-transition: -o-transform .3s ease-out;
+    transition: transform .4s ease-out;
+    /*
+    -webkit-transform: translate(0,-25%);
+    -ms-transform: translate(0,-25%);
+    -o-transform: translate(0,-25%);
+    */
+    transform: translate(0,-100%);
+}
+
+.modal-header
+{
+    padding: 1em 0;
+    text-align: right;
+}
+
+.modal-header .close
+{
+    background-color: #111;
+    border: solid .125em #aaa;
+    color: #efefef;
+    cursor: pointer;
+}
+
+.modal-header .close:hover
+{
+    background-color: #fefefe;
+    color: #333;
+}
+
+.modal-open
+{
+    overflow: hidden;
+}
+
+.modal-open .modal
+{
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+/* override JS display: block */
+.modal.show
+{
+    /* display: flex !important; */
+    align-items: center;
+}
+/* override JS display: block */
+
+.modal.show .modal-dialog
+{
+    -webkit-transform: translate(0,0);
+    -ms-transform: translate(0,0);
+    -o-transform: translate(0,0);
+    transform: translate(0,0);
+}
+
+@media (min-width: 60em)
+{
+    .modal-dialog
+    {
+        margin: 1em auto;
+        width: 60%;
+    }
+/*
+    .modal-content
+    {
+        -webkit-box-shadow: 0 0 2em rgba(0,0,0,.75);
+        box-shadow: 0 0 2em rgba(0,0,0,.75);
+    }
+    */
+}
+
+/* Additional for News */
+/* .u-ArticleGroup,
+.u-lAside
+{
+    display: none;
+} */
+
+ul.videoList
+{
+    grid-template-columns: 1fr;
+}
+
+@media all and (min-width: 34.38em)
+{
+    ul.videoList
+    {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media all and (min-width: 56.25em)
+{
+    ul.videoList
+    {
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+.u-lContent
+{
+    max-width: none !important;
+    margin: 0 !important;
+}
+
+.u-newsInner .u-pageTitle
+{
+    display: block;
+    visibility: visible;
 }
