Hide article output notice on Vassar Events Form.

--- a/assets/sass/local-group.scss
+++ b/assets/sass/local-group.scss
@@ -1737,3 +1737,6 @@ ul.videoList
 .u-newsInner:not(.u-folderReleases) .u-ArticleListItem__label--dateline {
     display:none;    
 }
+html.u-pageVassarevents .u-Article {
+    display: none;
+}
